--- a/ss6/bai_tap/blog/src/main/resources/templates/edit.html
+++ b/ss6/bai_tap/blog/src/main/resources/templates/edit.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-$END$
+<h1>Trang Edit </h1>
+<a href="/blog/list" class="btn btn-primary">Back To List</a>
+<form action="/blog/edit" method="post" th:object="${blogs}">
+    <table class="table table-primary">
+        <input th:type="hidden" th:field="*{id}">
+
+        <tr>
+            <td>Tên Tác Giả</td>
+            <td><input type="text" th:field="*{name}"></td>
+        </tr>
+        <tr>
+            <td>Tên Tác Phẩm</td>
+            <td><input type="text" th:field="*{nameBook}"></td>
+        </tr>
+        <tr>
+            <td>Ngày Sản Xuất</td>
+            <td><input type="date" th:field="*{date}"></td>
+        </tr>
+        <tr>
+            <td>Status</td>
+            <td><input type="number" th:field="*{status}"></td>
+        </tr>
+        <tr>
+            <td>Category</td>
+            <td>
+                <select th:field="*{category}">
+                    <option th:each="items:${category}" th:text="${items.name}" th:value="${items.id}"></option>
+                </select>
+            </td>
+        </tr>
+    </table>
+    <input type="submit" placeholder="Submit" class="btn btn-primary">
+</form>
+
+
 </body>
 </html>
