--- a/case/Case_Study/src/main/resources/templates/contract/list.html
+++ b/case/Case_Study/src/main/resources/templates/contract/list.html
@@ -9,6 +9,13 @@
 </head>
 <body style="background: wheat">
 <h2>Contract List</h2>
+<div>
+    <button type="button" class="btn btn-outline-danger
+                    col-sm-1 mb-2"
+            data-bs-toggle="modal"
+            data-bs-target="#modalAdd">Thêm mới
+    </button>
+</div>
 <table class="table table-success">
     <tr>
 
@@ -19,28 +26,117 @@
         <th>customer</th>
         <th>facility</th>
         <th>totalPrice</th>
+        <th colspan="2">Cơ sở đính kèm</th>
 
     </tr>
-    <tr th:each="contract,var:${contracts}">
-        <td th:text="${var.count+5*contracts.number}"></td>
+    <tr th:each="contract,var:${contractDtoPage}">
+        <td th:text="${var.count+5*contractDtoPage.number}"></td>
         <td th:text="${contract.startDate}"></td>
         <td th:text="${contract.endDate}"></td>
         <td th:text="${contract.deposit}"></td>
-        <td th:text="${contract.customer.name}"></td>
-        <td th:text="${contract.facility.name}"></td>
-        <td th:text="${contract.totalPrice}"></td>
+        <td th:text="${contract.customerName}"></td>
+        <td th:text="${contract.facilityName}"></td>
+        <td th:text="${contract.total}"></td>
+<!--        <td>-->
+<!--            <button th:onclick="|idContractDetail(${contract.getId()})|"-->
+<!--                    class="btn btn-warning my-2 my-sm-0" type="button" data-bs-toggle="modal"-->
+<!--                    data-bs-target="#modalAdd2">-->
+<!--                <span style="color: black">+</span>-->
+<!--            </button>-->
+<!--        </td>-->
+<!--        <td>-->
+<!--            <button class="btn btn-secondary my-2 my-sm-0 "-->
+<!--                    th:attr="onclick=|showAttachDetail('${contract.getId()}')|" data-bs-toggle="modal"-->
+<!--                    data-bs-target="#showAttachDetail">-->
+<!--                <span class="text-light m-auto" style="color: black">Danh sách dịch vụ đính kèm</span>-->
+<!--            </button>-->
+<!--        </td>-->
+
 
     </tr>
 </table>
+<div class="modal fade" id="modalAdd" tabindex="-1"
+     aria-labelledby="exampleModalLabel" aria-hidden="true"
+     data-bs-backdrop="static">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5">Thêm hợp đồng?</h1>
+                <button type="button" class="btn-close"
+                        data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form th:action="@{/contract/save}"
+                  th:object="${contract}" th:method="post">
+                <div class="col-lg-6">
+                    <div class="mb-4">
+                        <label for="name">Tên dịch vụ:</label>
+                        <div>
+                            <select id="name" th:field="*{facility}">
+                                <option th:value="${''}"></option>
+                                <option th:each="item : ${facilityPage}" th:value="${item.id}"
+                                        th:text="${item.name}"></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="mb-4">
+                        <label for="nameCus">Tên khách hàng</label>
+                        <div>
+                            <select id="nameCus" th:field="*{customer}">
+                                <option th:value="${''}"></option>
+                                <option th:each="item : ${customerPage}" th:value="${item.id}"
+                                        th:text="${item.name}"></option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="mb-4 ">
+                        <label for="dateStart">Ngày bắt đầu</label>
+                        <div>
+                            <input type="date" id="dateStart" class="form-control"
+                                   th:field="*{startDate}"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="mb-4 ">
+                        <label for="dateEnd">Ngày kết thúc</label>
+                        <div>
+                            <input type="date" id="dateEnd" class="form-control"
+                                   th:field="*{endDate}"/>
+                        </div>
+                    </div>
+                    <div class="mb-4 ">
+                        <label for="deposit">Tiền đặt cọc</label>
+                        <div>
+                            <input type="text" id="deposit" class="form-control" placeholder="Nhập tiền đặt cọc.."
+                                   th:field="*{deposit}"/>
+                        </div>
+                    </div>
+                    <div class="mb-4">
+                        <lable>Dịch vụ đính kèm</lable>
+                        <button class="btn btn-warning my-2 my-sm-0" type="button" data-bs-toggle="modal"
+                                data-bs-target="#modalAdd2">+
+                        </button>
+                    </div>
+                </div>
+                <div class="mb-4 text-center">
+                    <button id="save"
+                            class="btn btn-info btn-outline-success btn-sm border border-2 border-success text-dark">
+                        Tạo hợp đồng <i class="fa-solid fa-floppy-disk"></i>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 <div>
-    <a th:href="@{'/contract'(page=${contracts.number - 1})}"
-       th:if="${contracts.hasPrevious()}">Previous</a>
+    <a th:href="@{'/contract'(page=${contractDtoPage.number - 1})}"
+       th:if="${contractDtoPage.hasPrevious()}">Previous</a>
 
-    <span th:text="${contracts.number + 1}"></span>
-    <span th:text="${contracts.totalPages }"></span>
+    <span th:text="${contractDtoPage.number + 1}"></span>
+    <span th:text="${contractDtoPage.totalPages }"></span>
 
-    <a th:href="@{'/contract'(page = ${contracts.number + 1})}"
-       th:if="${contracts.hasNext()}">Next</a>
+    <a th:href="@{'/contract'(page = ${contractDtoPage.number + 1})}"
+       th:if="${contractDtoPage.hasNext()}">Next</a>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
