--- a/case/Case_Study/src/main/resources/templates/contract/list.html
+++ b/case/Case_Study/src/main/resources/templates/contract/list.html
@@ -37,20 +37,34 @@
         <td th:text="${contract.customerName}"></td>
         <td th:text="${contract.facilityName}"></td>
         <td th:text="${contract.total}"></td>
-<!--        <td>-->
-<!--            <button th:onclick="|idContractDetail(${contract.getId()})|"-->
-<!--                    class="btn btn-warning my-2 my-sm-0" type="button" data-bs-toggle="modal"-->
-<!--                    data-bs-target="#modalAdd2">-->
-<!--                <span style="color: black">+</span>-->
-<!--            </button>-->
-<!--        </td>-->
-<!--        <td>-->
-<!--            <button class="btn btn-secondary my-2 my-sm-0 "-->
-<!--                    th:attr="onclick=|showAttachDetail('${contract.getId()}')|" data-bs-toggle="modal"-->
-<!--                    data-bs-target="#showAttachDetail">-->
-<!--                <span class="text-light m-auto" style="color: black">Danh sách dịch vụ đính kèm</span>-->
-<!--            </button>-->
-<!--        </td>-->
+        <td>
+            <button th:onclick="|idContractDetail(${contract.getId()})|"
+                    class="btn btn-warning my-2 my-sm-0" type="button" data-bs-toggle="modal"
+                    data-bs-target="#modalAdd2">
+                <span style="color: black">+</span>
+            </button>
+        </td>
+        <td>
+            <button class="btn btn-secondary my-2 my-sm-0 "
+                    th:attr="onclick=|showAttachDetail('${contract.getId()}')|" data-bs-toggle="modal"
+                    data-bs-target="#showAttachDetail">
+                <span class="text-light m-auto" style="color: black">Danh sách dịch vụ đính kèm</span>
+            </button>
+        </td>
+        <!--        <td>-->
+        <!--            <button th:onclick="|idContractDetail(${contract.getId()})|"-->
+        <!--                    class="btn btn-warning my-2 my-sm-0" type="button" data-bs-toggle="modal"-->
+        <!--                    data-bs-target="#modalAdd2">-->
+        <!--                <span style="color: black">+</span>-->
+        <!--            </button>-->
+        <!--        </td>-->
+        <!--        <td>-->
+        <!--            <button class="btn btn-secondary my-2 my-sm-0 "-->
+        <!--                    th:attr="onclick=|showAttachDetail('${contract.getId()}')|" data-bs-toggle="modal"-->
+        <!--                    data-bs-target="#showAttachDetail">-->
+        <!--                <span class="text-light m-auto" style="color: black">Danh sách dịch vụ đính kèm</span>-->
+        <!--            </button>-->
+        <!--        </td>-->
 
 
     </tr>
@@ -128,6 +142,90 @@
         </div>
     </div>
 </div>
+
+<!-- thêm dịch vụ đi kèm-->
+<div class="modal fade" id="modalAdd2" tabindex="-1"
+     aria-labelledby="exampleModalLabel" aria-hidden="true"
+     data-bs-backdrop="static">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5">Thêm dịch vụ đính kèm?</h1>
+                <button type="button" class="btn-close"
+                        data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form th:action="@{/contract/attach}"
+                  th:object="${contractDetail}" th:method="post">
+                <table class="table table-view">
+                    <tr hidden>
+                        <th>
+                            <lable th:for="id">Id:</lable>
+                        </th>
+                        <td>
+                            <input readonly type="text" th:field="*{id}">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <label for="nameAtt">Tên dịch vụ đi kèm:</label>
+                        </th>
+                        <td>
+                            <select id="nameAtt" th:field="*{attachFacility}">
+                                <option th:value="${''}"></option>
+                                <option th:each="item : ${attachFacilityList}" th:value="${item.id}"
+                                        th:text="${item.name}"></option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <lable for="quantity">Số lượng:</lable>
+                        </th>
+                        <td>
+                            <input type="number" id="quantity" th:field="*{quantity}">
+                        </td>
+                    </tr>
+                    <tr hidden>
+                        <th>
+                            <label th:for="contract">Mã hợp đồng</label>
+                        </th>
+                        <td>
+                            <input readonly type="text" id="idInput" th:field="*{contract}">
+                        </td>
+                    </tr>
+                </table>
+                <div class="mb-4 text-center">
+                    <button class="btn btn-info btn-outline-success btn-sm border border-2 border-success text-dark">
+                        Save
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+<div class="modal fade" id="showAttachDetail" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content modalCSS">
+            <div class="modal-header">
+                <h4 class="modal-title text-center" id="exampleModalLabel2">Danh sách dịch vụ đính kèm</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <table id="showAttach"></table>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<input hidden id="mess" th:value="${mess}">
+<!--<script src="/jquery-3.6.1.min.js"></script>-->
+
 <div>
     <a th:href="@{'/contract'(page=${contractDtoPage.number - 1})}"
        th:if="${contractDtoPage.hasPrevious()}">Previous</a>
@@ -138,6 +236,41 @@
     <a th:href="@{'/contract'(page = ${contractDtoPage.number + 1})}"
        th:if="${contractDtoPage.hasNext()}">Next</a>
 </div>
+<script>
+
+    function showAttachDetail(id) {
+
+        $.ajax({
+            url: "http://localhost:8080/api/contracts/v1/" + id,
+            type: "GET",
+            dataType: "json",
+            success: function (data) {
+                if (data.length > 0) {
+                    // $("#note").hide();
+                    let tr = [];
+                    tr.push("<tr>");
+                    tr.push("<th>" + "Tên dịch vụ đi kèm" + "</th>");
+                    // tr.push("<th class='px-5'>" + "Đơn vị" + "</th>");
+                    tr.push("<th class='text-center'>" + "Số lượng" + "</th>");
+                    tr.push("<th class='text-center'>" + "Giá tiền" + "</th>");
+                    tr.push("<th class='text-center'>" + "Tổng tiền" + "</th>");
+                    tr.push("</tr>");
+
+                    for (let i = 0; i < data.length; i++) {
+                        tr.push("<tr>");
+                        tr.push("<td class='h6'>" + data[i].attachName + "</td>");
+                        tr.push("<td class='px-5'>" + data[i].totalQuantity+ "</td>");
+                        tr.push("<td class='text-center'>" + data[i].cost + "</td>");
+                        tr.push("<td class='text-center'>" + data[i].totalMoney + "</td>");
+                        tr.push("</tr>");
+                    }
+                    $("#showAttach").html(tr.join(""));
+
+                }
+            }
+        })
+    }
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
