--- a/case/Case_Study/src/main/resources/templates/contract/list.html
+++ b/case/Case_Study/src/main/resources/templates/contract/list.html
@@ -45,11 +45,11 @@
             </button>
         </td>
         <td>
-            <button class="btn btn-secondary my-2 my-sm-0 "
-                    th:attr="onclick=|showAttachDetail('${contract.getId()}')|" data-bs-toggle="modal"
-                    data-bs-target="#showAttachDetail">
-                <span class="text-light m-auto" style="color: black">Danh sách dịch vụ đính kèm</span>
-            </button>
+            <!--            <button class="btn btn-secondary my-2 my-sm-0 "-->
+            <!--                    th:attr="onclick=|showAttachDetail('${contract.getId()}')|" data-bs-toggle="modal"-->
+            <!--                    data-bs-target="#showAttachDetail">-->
+            <!--                <span class="text-light m-auto" style="color: black">Danh sách dịch vụ đính kèm</span>-->
+            <!--            </button>-->
         </td>
         <!--        <td>-->
         <!--            <button th:onclick="|idContractDetail(${contract.getId()})|"-->
@@ -259,7 +259,7 @@
                     for (let i = 0; i < data.length; i++) {
                         tr.push("<tr>");
                         tr.push("<td class='h6'>" + data[i].attachName + "</td>");
-                        tr.push("<td class='px-5'>" + data[i].totalQuantity+ "</td>");
+                        tr.push("<td class='px-5'>" + data[i].totalQuantity + "</td>");
                         tr.push("<td class='text-center'>" + data[i].cost + "</td>");
                         tr.push("<td class='text-center'>" + data[i].totalMoney + "</td>");
                         tr.push("</tr>");
@@ -271,8 +271,12 @@
         })
     }
 </script>
+<script th:inline="javascript">
+    function idContractDetail(id) {
+        document.getElementById("idInput").value = id;
+    }
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+</script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
